--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         <div class="card">
             <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
+                <div class="form-group">
+                    <label for="exampleInputEmail1"><h5>Add title</h5></label>
+                    <input type="text" placeholder="Enter title" id ="addTitle" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                  </div>
                 <h5 class="card-title">What to do!</h5>
                 <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                 <div class="form-group">
